--- a/requirements.txt
+++ b/requirements.txt
@@ -1,105 +1,23 @@
-appdirs==1.4.3
-astroid==1.4.9
-attrs==15.2.0
-backports.functools-lru-cache==1.3
-BeautifulSoup==3.2.1
-beautifulsoup4==4.6.0
-blinker==1.3
-chardet==2.3.0
-Cheetah==2.4.4
-click==6.6
-configglue==1.1.2
-configobj==5.0.6
-configparser==3.5.0
-cryptography==1.2.3
+asn1crypto==0.22.0
+certifi==2017.4.17
+cffi==1.10.0
+chardet==3.0.4
 cssselect==1.0.1
-cycler==0.9.0
-decorator==4.0.6
-defer==1.0.6
-dirspec==13.10
-duplicity==0.7.6
-ecdsa==0.13
-enum34==1.1.2
-feedparser==5.1.3
-Flask==0.11.1
-gunicorn==19.6.0
-httplib2==0.9.1
-idna==2.0
-ipaddress==1.0.16
-ipython==2.4.1
-isort==4.2.5
-itsdangerous==0.24
-Jinja2==2.8
-lazy-object-proxy==1.2.2
-lockfile==0.12.2
-lxml==3.5.0
-Mako==1.0.3
-Markdown==2.6.8
-MarkupSafe==0.23
-matplotlib==1.5.1
-mccabe==0.6.1
-mpmath==0.19
-nemo-emblems==3.2.3
-netifaces==0.10.4
-nose==1.3.7
-numpy==1.11.0
-oauthlib==1.0.3
-oneconf==0.3.9
-packaging==16.8
-PAM==0.4.2
-pandas==0.17.1
-paramiko==1.16.0
+enum34==1.1.6
+idna==2.5
+ipaddress==1.0.18
+lxml==3.8.0
+numpy==1.13.0
+pandas==0.20.2
 parsel==1.2.0
-pexpect==4.0.1
-Pillow==3.1.2
-piston-mini-client==0.7.5
-protobuf==2.6.1
-ptyprocess==0.5
-pyasn1==0.1.9
-pyasn1-modules==0.0.7
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0
-PyDispatcher==2.0.5
-pygobject==3.20.0
-pyinotify==0.9.6
-PyJWT==1.3.0
-pylint==1.6.5
-pyOpenSSL==0.15.1
-pyparsing==2.2.0
-pyparted==3.10.7
-pyrit==0.4.0
-pyserial==3.0.1
-pysmbc==1.0.15.5
-python-apt==1.1.0b1
-python-dateutil==2.4.2
-python-debian==0.1.27
-python-xlib==0.14
-pytz==2014.10
-pywatchman==1.3.0
-pyxdg==0.25
-pyzmq==15.2.0
+pyasn1==0.2.3
+pycparser==2.17
+python-dateutil==2.6.0
+pytz==2017.2
 queuelib==1.4.2
-reportlab==3.3.0
-requests==2.10.0
-scipy==0.17.0
-Scrapy==1.4.0
-service-identity==16.0.0
-setproctitle==1.1.8
-simplegeneric==0.8.1
-simplejson==3.10.0
+requests==2.18.1
 six==1.10.0
-sympy==0.7.6.1
-termcolor==1.1.0
-tornado==4.2.1
-Twisted==16.0.0
-urllib3==1.13.1
-uTidylib==0.2
-vboxapi==1.0
-virtualenv==15.1.0
+slackclient==1.0.6
+urllib3==1.21.1
 w3lib==1.17.0
-Werkzeug==0.11.10
-wit==4.2.0
-wrapt==1.10.10
-youtube-dl==2016.2.22
-zope.interface==4.1.3
+websocket-client==0.44.0
